kubernetes/gabernetes/apps/prometheus/alloy/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-alloy
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-alloy: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "4317"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alloy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alloy
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-alloy: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "4317"
